Moving through pages

--- a/src/app/views/user/login.ejs
+++ b/src/app/views/user/login.ejs
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Index</title>
+    <title>Document</title>
 </head>
 <body>
-    <%- include("partials/header") %>
-    <h1>Welcome to my Cool page</h1>
+    <%- include("../partials/header") %>
+    <h1>Login</h1>
 </body>
 </html>
