--- a/src/app/views/user/register.ejs
+++ b/src/app/views/user/register.ejs
@@ -8,5 +8,11 @@
 <body>
     <%- include("../partials/header")%>
     <h1>Register</h1>
+    <form action="/user/register" method="POST">
+        <input type="text" name="username" placeholder="username...">
+        <input type="text" name="password" placeholder="password...">
+        <input type="text" name="passwordCheck" placeholder="password again...">
+        <input type="submit" value="Register">
+    </form>
 </body>
 </html>
