--- a/src/app/views/user/login.ejs
+++ b/src/app/views/user/login.ejs
@@ -8,5 +8,10 @@
 <body>
     <%- include("../partials/header") %>
     <h1>Login</h1>
+    <form action="/user/login" method="POST">
+        <input type="text" name="username" placeholder="Name...">
+        <input type="text" name="password" placeholder="Password...">
+        <input type="submit" value="Login">
+    </form>
 </body>
 </html>
