Profile and logout

--- a/src/app/views/partials/header.ejs
+++ b/src/app/views/partials/header.ejs
@@ -2,4 +2,5 @@
     <a href="/">Index</a>
     <a href="/user/registerGet">Register</a>
     <a href="/user/loginGet">Login</a>
+    <a href="/user/profile">Profile</a>
 </nav>
